# announce-lib

./: Cargo.toml  LICENSE.txt  Readme.md
sample_uploads/: License.md
src/: error.rs  lib.rs  message.rs
src/service/: mod.rs  rocketchat.rs
src/service/dbus/: message.rs  mod.rs
src/service/discord/: message.rs  mod.rs  tests.rs
src/service/rocketchat/: message.rs  mod.rs  tests.rs  upload.rs
