[package]
name = "announce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sending
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
rustls = "0.20.7"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

# parsing uri
url = "2.3.1"

# common
tokio = { version = "1.21.2", features = ["macros"] }
thiserror = "1.0.37"
log = "0.4.17"

[dev-dependencies]
pretty_env_logger = "0.4.0"