[package]
name = "announce"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies]
# sending
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"] }
rustls = "0.20.7"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.23", features = ["serde"] }

# catching uri errors
url = "2.3.1"

# common
tokio = { version = "1.21.2", features = ["macros"] }
thiserror = "1.0.37"
log = "0.4.17"

# optional for features
zbus = { version = "3.5.0", optional = true }


# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#development-dependencies
[dev-dependencies]
pretty_env_logger = "0.4.0"


# https://doc.rust-lang.org/cargo/reference/features.html
[features]
default = ["rocketchat", "discord"]
rocketchat = ["chrono/clock"]
discord = []
dbus = ["dep:zbus"]
